# otoge

./: .gitattributes  .gitignore  Cargo.toml  README.md  renovate.json
.github/workflows/: auto-update-user-agent.yml  build.yml  lint.yml  run-fetcher.yml
data/chunithm_intl/: music.toml
data/chunithm_jp/: music.toml
data/maimai_intl/: music.toml
data/maimai_jp/: music.toml
data/ongeki/: music.toml
data/polarischord/: music.toml
data/popnmusic/: music.toml
data/soundvoltex/: music.toml
fetcher/: Cargo.toml
fetcher/src/: chunithm.rs  default_user_agent.txt  images.rs  maimai.rs  main.rs  ongeki.rs  polarischord.rs  popnmusic.rs  soundvoltex.rs  traits.rs
fetcher/src/extractors/: mod.rs  polarischord.rs  popnmusic.rs  serde.rs  soundvoltex_vi.rs  soundvoltex_vii.rs
generator/: Cargo.toml
generator/src/: main.rs  traits.rs
lib/: Cargo.toml
lib/src/: helpers.rs  lib.rs
lib/src/chunithm/: deserializers.rs  mod.rs  models.rs
lib/src/maimai/: deserializers.rs  mod.rs  models.rs
lib/src/ongeki/: deserializers.rs  mod.rs  models.rs
lib/src/polarischord/: mod.rs  models.rs
lib/src/popnmusic/: mod.rs  models.rs
lib/src/shared/: deserializers.rs  mod.rs  traits.rs
lib/src/soundvoltex/: mod.rs  models.rs
scripts/: update_readme.sh
shared/src/: lib.rs
shared/src/chunithm/: deserializers.rs  mod.rs
shared/src/models/: mod.rs
shared/src/models/chunithm/: deserializers.rs  mod.rs
ui/: package.json  pnpm-lock.yaml  vite.config.ts
