[package]
name = "otoge-fetcher"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.100"
async-trait = "=0.1.89"
chrono = { version = "=0.4.42", features = ["serde"] }
otoge = { path = "../lib" }
reqwest = { version = "=0.12.28", features = ["json"] }
serde = "=1.0.228"
scraper = "=0.25.0"
tokio = { version = "=1.48.0", features = ["full"] }
toml = "=0.9.8"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
