[package]
name = "otoge-fetcher"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.102"
async-trait = "=0.1.89"
chrono = { version = "=0.4.43", features = ["serde"] }
otoge = { path = "../lib" }
reqwest = { version = "=0.13.2", features = ["form", "json"] }
serde = "=1.0.228"
scraper = "=0.25.0"
tokio = { version = "=1.49.0", features = ["full"] }
toml = "=1.0.3"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
