[package]
name = "otoge-fetcher"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.104"
async-trait = "=0.1.91"
chrono = { version = "=0.4.45", features = ["serde"] }
otoge = { path = "../lib" }
reqwest = { version = "=0.13.4", features = ["form", "json", "query"] }
serde = "=1.0.228"
scraper = "=0.27.0"
tokio = { version = "=1.53.0", features = ["full"] }
toml = "=1.1.3"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
