[package]
name = "otoge-generator"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.99"
otoge = { path = "../lib" }
serde = "=1.0.219"
serde_json = "=1.0.143"
tokio = { version = "=1.47.1", features = ["full"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }
