[package]
name = "otoge-generator"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.100"
otoge = { path = "../lib" }
serde = "=1.0.228"
serde_json = "=1.0.145"
tokio = { version = "=1.47.1", features = ["full"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }
