[package]
name = "otoge"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.101"
chrono = { version = "=0.4.43", features = ["serde"] }
serde = { version = "=1.0.228", features = ["serde_derive"] }
tokio = { version = "=1.49.0", features = ["fs"] }
toml = "=1.0.1"
tracing = "=0.1.44"
